<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.regist.RegistActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:background="@drawable/bg_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="@+id/viewTop"
            app:layout_constraintTop_toTopOf="@+id/viewTop" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:translationZ="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/signup" />

        <TextView
            android:id="@+id/txt_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/validate_password"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/text"
           android:padding="@dimen/_10sdp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_150sdp"
            android:layout_marginRight="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/txt_validate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/regist_now"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gmail_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:minHeight="@dimen/_40sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gmail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColorHint="@color/hint"
                        android:textSize="@dimen/_15ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:minHeight="@dimen/_40sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userName"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColorHint="@color/hint"
                        android:textSize="@dimen/_15ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:minHeight="@dimen/_40sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gmail_layout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:inputType="textVisiblePassword"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColorHint="@color/hint"
                        android:textSize="@dimen/_15ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:minHeight="@dimen/_40sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_layout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColorHint="@color/hint"
                        android:textSize="@dimen/_15ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/regist_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/round_green_button"
                    android:minHeight="@dimen/_42sdp"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>