<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.introduceStory.ReviewStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:minHeight="@dimen/_120sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text">

            <TextView
                android:id="@+id/textContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/_120sdp"
                android:padding="@dimen/_5sdp"
                android:text="..."
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/rate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardContent" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:padding="@dimen/_3sdp"
            android:text="..."
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@id/rate_title"
            app:layout_constraintStart_toEndOf="@id/rate_title"
            app:layout_constraintTop_toTopOf="@id/rate_title" />

        <TextView
            android:id="@+id/comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            android:translationZ="@dimen/_1sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:minHeight="@dimen/_60sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcvComment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/content_comment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/introduce_add_comment"
                    android:inputType="text"
                    android:maxLines="4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_send"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:minHeight="@dimen/_60sdp"
                    android:textColorHint="@color/hint"
                    android:textSize="@dimen/_15ssp" />

                <ImageView
                    android:id="@+id/btn_send"
                    android:layout_width="@dimen/_29sdp"
                    android:layout_height="@dimen/_29sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_send"
                    android:layout_marginRight="@dimen/_5sdp"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>